1999-01-13  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* Makefile.am (etc_dir): Add new variable to allow inclusion of 
	Makefile.tests form build area.

1999-01-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* ActionGroupRandomized.m, ConcurrentGroup.m,
	ConcurrentGroupRandomized.m, DynamicSchedule.m,
	DynamicScheduleRepeat.m, ForEach.m, ForEachRandomized.m (main):
	Use initSwarmBatch instead of initSwarm.

	* Makefile.am (TESTS_ENVIRONMENT): Set SWARM_INHIBIT_ARCHIVER_LOAD.

1999-01-13  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* Makefile.am: Use noinst_PROGRAMS instead of bin_PROGRAMS. 

	* ActionGroup.m, ActionGroupRandomized.m, ActionGroup_test.h, 
	ActionGroup_test.m, ChangeLog, ConcurrentGroup.m, 
     	ConcurrentGroupRandomized.m, ConcurrentGroup_test.h, 
     	ConcurrentGroup_test.m, DSRSwarm.h, DSRSwarm.m, DSSwarm.h, 
     	DSSwarm.m, DynamicSchedule.m, DynamicScheduleRepeat.m, ForEach.m, 
     	ForEachRandomized.m, Holder.h, Holder.m, Responder.h, Responder.m, 
	Schedule.m:  Formatting.

1999-01-12  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* ActionGroup.m: New file.

	* ActionGroupRandomized.m: Likewise.

	* ConcurrentGroup.m: Likewise.

	* ConcurrentGroupRandomized.m: Likewise.  

	* DynamicSchedule.m: Likewise.

	* DynamicScheduleRepeat.m: Likewise.

	* ForEachRandomized.m: Likewise.

	* ForEach.m: Likewise.

	* Schedule.m: Likewise.

	* ActionGroup_test.[hm]: Likewise.

	* ConcurrentGroup_test.[hm]: Likewise.

	* DSRSwarm.[hm]: Likewise.

	* DSSwarm.[hm]: Likewise.

	* Holder.[hm]:Likewise.

	* Responder.[hm]: Likewise.
	
